--- a/css/pessoal.css
+++ b/css/pessoal.css
@@ -4,11 +4,39 @@
 
 #area-pessoal{
     color: var(--font-color-blue);
-    font-size: 250%;
+    font-size: 300%;
+    text-align: center;
 }
 
 #area-pessoal:hover{
     transition: 0.3s ease;
     padding: 10px;
 }
+
+.areas-pessoal{
+    padding-top: 2%;
+}
+
+.areas-pessoal h1{
+    font-size: 40px;
+    color: var(--font-color-blue);
+}
+
+.foto-pessoal{
+    height: 250px;
+    justify-self:right;
+}
+
+@media screen and (max-width: 750px) {
+    #area-pessoal {
+        font-size: 250%;
+        text-align: center;
+    }
+    
+    .pessoal h1{
+        font-size: 200% ; 
+    }
+
+}
+
 
