--- a/css/header.css
+++ b/css/header.css
@@ -2,7 +2,10 @@
     background-image: url(../img/back.png);
     background-size: cover;
     min-height: 100%;
-    background-repeat:round
+    background-repeat:round;
+    box-sizing: border-box;
+    box-shadow: 0px 0px 8px var(--font-color-blue);
+    
 }
 
 .header{
@@ -23,6 +26,8 @@
     overflow: hidden;
     z-index: 90;
     width: 100%;    
+    box-sizing: border-box;
+    box-shadow: 0px 0px 8px var(--font-color-blue);
 }
 
 .navbar ul{
@@ -42,11 +47,12 @@
 }
 
 @media screen and (min-width: 450px) {
-    .navbar a:hover{
+    .nav-item:hover{
         background-color: var(--font-color-blue);
         color: var(--font-color-prim);
-        transition: 0.3s ease;
-        padding: 10px;
+        transform: scale(102%);
+        transition: 0.3s ease-in-out;
+        padding: 10%;
         border-radius: 50px;
     }
 }
@@ -54,6 +60,8 @@
 .logo{
     margin-right: auto;
     padding-left: 2%;
+    color: var(--font-color-prim);
+    text-shadow: var(--text-shaddow-2);
 }
 
 
@@ -63,13 +71,18 @@
     gap: 70px;
     padding-left: 2%;
     padding-bottom: 5%;
-    position:relative;
+    position: relative;
 
 }
 
 .img-incio{
     height: 350px;
     width: auto;
+}
+
+.img-incio:hover{
+    transform: scale(102%);
+    transition: 0.3s ease-in-out;
 }
 
 @media screen and (max-width: 750px) {
@@ -105,6 +118,11 @@
     padding-top: 15%;
 }
 
+#subtitulo:hover{
+    transform: scale(102%);
+    transition: 0.3s ease-in-out;
+}
+
 @media screen and (max-width: 750px) {
     .texto h1{
         font-size: 250%; ; 
@@ -118,8 +136,4 @@
         font-size: 80%;
     }
 }
-
-
-
-
 
