--- a/css/footer.css
+++ b/css/footer.css
@@ -1,11 +1,12 @@
 .footer{
     box-sizing: border-box;
     background-image: var(--background-image);
-    background-repeat: round;
+    background-size: cover;
     box-shadow: 0px 0px 8px var(--font-color-blue);
     color: var(--font-color-prim);
     font-size: 80%;
     width: 100%;
+    height: 100%;
 }
 
 .footer h1{
